LIC-451: DM postpone due to confiscation (#353)

--- a/server/views/taskList/optOutTask.pug
+++ b/server/views/taskList/optOutTask.pug
@@ -2,14 +2,12 @@ div.taskListItem
     h2.heading-medium Offender opt out
 
     div.pure-g
-        div.pure-u-1-2
+        div.pure-u-3-4
             if licenceStatus.decisions.optedOut
                 | Offender has opted out
             else
                 | Offender has opted in
-        div.pure-u-1-4
-        div.pure-u-1-4
-
+        div.pure-u-1-4.center
             form(method="post" action="/hdc/optOut/" + nomisId)
                 input(type="hidden" name="_csrf" value=csrfToken)
                 input(type="hidden" name="nomisId" value=nomisId || '')
