LIC-467: Use overidde dates when available

--- a/server/views/taskList/prisonerDetails.pug
+++ b/server/views/taskList/prisonerDetails.pug
@@ -48,8 +48,8 @@ div#personalDetails.pure-g.borderBottom.paddingBottom
     div.pure-u-1.pure-u-md-5-24
         div.midMarginBottom
             | Conditional release date
-            if (sentenceDetail.conditionalReleaseDate)
-                span#prisonerCrd.block.bold  #{sentenceDetail.conditionalReleaseDate}
+            if (sentenceDetail.effectiveConditionalReleaseDate)
+                span#prisonerCrd.block.bold  #{sentenceDetail.effectiveConditionalReleaseDate}
 
         div.midMarginBottom
             | HDC eligibility date
