--- a/server/views/eligibility/crdTime.pug
+++ b/server/views/eligibility/crdTime.pug
@@ -1,4 +1,5 @@
 extends ../layout
+include ../includes/errorBannerWithDetail
 
 block content
 
@@ -8,17 +9,20 @@ block content
     div.pure-g.pure-u-1
         include ../includes/back
         include ../includes/personalDetailsSummary
-        include ../includes/errorBanner
+        +errorBannerWithDetail(errorObject, [
+            {field: 'decision', message: 'Select yes or no'},
+            {field: 'dmApproval', message: 'Select yes or no'}
+        ])
 
         div.pure-u-1-2
             h2.heading-large Are there less than 4 weeks until the offender's conditional release date?
 
     if errorObject.decision
-        p.error-message Please select an answer
+        p.error-message Select yes or no
     form(method="post")
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="nomisId" value=nomisId || '')
-        div.smallPaddingTop.paddingBottom.largeMarginBottom
+        div#error-anchor.smallPaddingTop.paddingBottom.largeMarginBottom
             div.largePaddingBottom
                 div.form-group.inline.smallPaddingTop.pure-u-1-2
 
@@ -32,7 +36,7 @@ block content
                     div#dmApprovalForm(class=errorObject.dmApproval ? 'form-group-error panel panel-border-narrow': 'panel panel-border-narrow js-hidden')
                         p Has the decision maker given approval to continue the HDC case?
                             if errorObject.dmApproval
-                                span.error-message Please provide an answer
+                                span.error-message Select yes or no
                         div.multiple-choice.smallPaddingBottom
                             input#dmApprovalYes(type="radio" checked=dmApprovedValue === 'Yes' name="dmApproval" value="Yes")
                             label(for="dmApprovalYes") Yes
