--- a/server/views/eligibility/exceptionalCircumstances.pug
+++ b/server/views/eligibility/exceptionalCircumstances.pug
@@ -1,4 +1,5 @@
 extends ../layout
+include ../includes/errorBannerWithDetail
 
 block content
 
@@ -9,19 +10,21 @@ block content
         div.pure-u-1
             include ../includes/back
             include ../includes/personalDetailsSummary
-            include ../includes/errorBanner
+            +errorBannerWithDetail(errorObject, [
+                {field: 'decision', message: 'Select yes or no'}
+            ])
 
         div.pure-u-1-2
             h2.heading-large Have exceptional circumstances been accepted?
 
             if errorObject.decision
-                p.error-message Please select an answer
+                p.error-message Select yes or no
 
             form(method="post")
                 input(type="hidden" name="_csrf" value=csrfToken)
                 input(type="hidden" name="nomisId" value=nomisId || '')
 
-                div.largePaddingBottom
+                div#error-anchor.largePaddingBottom
                     div.form-group.inline.smallPaddingTop.largePaddingBottom
                         .multiple-choice
                             input#exceptionalCircumstancesYes(type='radio', checked=exceptionalCircumstancesValue === 'Yes' name='decision', value='Yes')
