--- a/server/views/proposedAddress/addressProposed.pug
+++ b/server/views/proposedAddress/addressProposed.pug
@@ -1,21 +1,24 @@
 extends ../layout
+include ../includes/errorBannerWithDetail
 
 block content
 
     div.pure-g.pure-u-1
         include ../includes/back
         include ../includes/personalDetailsSummary
-        include ../includes/errorBanner
+        +errorBannerWithDetail(errorObject, [
+            {field: 'decision', message: 'Select yes or no'}
+        ])
 
         div.pure-u-1-2
             h2.heading-large Has the offender proposed a curfew address?
 
     if errorObject.decision
-        p.error-message Please select an answer
+        p.error-message Select yes or no
     form(method="post")
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="nomisId" value=nomisId || '')
-        div.smallPaddingTop.paddingBottom.largeMarginBottom
+        div#error-anchor.smallPaddingTop.paddingBottom.largeMarginBottom
             div.largePaddingBottom
                 div.form-group.inline.smallPaddingTop
 
