added lines into task list

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -112,7 +112,7 @@ $path: "/public/images/";
 }
 
 .taskListItem {
-
+    border-bottom: solid $grey-2 1px;
     padding-top: 15px;
     h2 {
         padding-top: 10px;
