--- a/server/views/taskList/curfewAddressTask.pug
+++ b/server/views/taskList/curfewAddressTask.pug
@@ -5,9 +5,9 @@ div.taskListItem
         div.pure-g
             div.pure-u-1
                 if licenceStatus.decisions.bassReferralNeeded
-                    p BASS referral requested
+                    | BASS referral requested
                 if licenceStatus.decisions.optedOut
-                    p Opted out
+                    | Opted out
 
     else
         div.pure-g
