--- a/server/views/proposedAddress/includes/preferredAddress.pug
+++ b/server/views/proposedAddress/includes/preferredAddress.pug
@@ -19,7 +19,7 @@ div#addressDetails.pure-g.largePaddingBottom
                 p#telephone.bold #{address.telephone}
 
         div.pure-u-md-2-3.paddingBottom
-            p Does the address have an electricity supply?
+            p Is there an electricity supply?
             if address.electricity
                 p#electricity.bold #{address.electricity}
 
