--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -13,11 +13,8 @@ block content
             h2.heading-large Proposed curfew address
 
             if address
-                p The following discharge address have been requested by the offender.
 
                 +addressDetail('curfew', address)
-
-        h3.heading-medium Address check confirmation
 
         form(method="post")
             input(type="hidden" name="_csrf" value=csrfToken)
@@ -25,8 +22,8 @@ block content
             input(type="hidden" name="addressIndex" value=address.index || '')
             div.pure-g.largePaddingBottom
                 div.pure-u-1.pure-u-sm-5-12.pure-g
-                    div.form-group.inline
-                        p Does the homeowner/landlord give informed consent to HDC at the address?
+                    div.form-group.inline.paddingTop
+                        p Does the main occupier consent to HDC?
 
                         div.multiple-choice(data-target="consentForm")
                             input#hdcConsentYes(type="radio" checked=address.consent === 'Yes' name="consent" value="Yes")
@@ -37,7 +34,7 @@ block content
 
                         div#consentForm.panel.panel-border-narrow.js-hidden
                             div.form-group
-                                p Does the address have an electricity supply?
+                                p Is there an electricity supply?
                                 div.multiple-choice
                                     input#electricityYes(type="radio" checked=address.electricity === 'Yes' name="electricity" value="Yes")
                                     label(for="electricityYes") Yes
@@ -46,7 +43,7 @@ block content
                                     label(for="electricityNo") No
 
                             div.form-group
-                                p Was a home visit conducted in this case?
+                                p Did you do a home visit?
                                 div.multiple-choice
                                     input#homeVisitConductedYes(type="radio" checked=address.homeVisitConducted === 'Yes' name="homeVisitConducted" value="Yes")
                                     label(for="homeVisitConductedYes") Yes
