updated page text for eligibility task

--- a/server/views/eligibility/crdTime.pug
+++ b/server/views/eligibility/crdTime.pug
@@ -15,7 +15,7 @@ block content
         ])
 
         div.pure-u-1-2
-            h2.heading-large Are there less than 4 weeks until the offender's conditional release date?
+            h2.heading-large Are there less than 4 weeks to the conditional release date?
 
     if errorObject.decision
         p.error-message Select yes or no
