--- a/server/views/curfew/curfewHours.pug
+++ b/server/views/curfew/curfewHours.pug
@@ -16,23 +16,21 @@ block content
         div.pure-g.borderBottom.midPaddingBottom
             div.pure-u-1.pure-u-md-14-24
                 div.pure-g.smallPaddingBottom
-                    div.pure-u-1-3.pure-u-md-1-3
+                    div.pure-u-1-4
                         span.bold From
-                    div.pure-u-1-3.pure-u-md-2-3
+                    div.pure-u-3-4
                         span.bold Until
                 div.pure-g
-                    div.pure-u-1-3.pure-u-md-1-3
+                    div.pure-u-1-4
                         div.tinyPaddingBottom
                             label(for="firstNightFrom", class="form-label")
                                 div.pure-g.content-pull
-                                    div.pure-u-1-2
+                                    div.pure-u-1-
                                         div.l-box
                                             input(name="firstNightFrom", id="firstNightFrom" class="form-control", value=data['firstNightFrom'] || "19:00", type="time")
                                     div.pure-u-1-2
-                                        div.l-box.l-box--no-left
-                                            span.hours-text hours
 
-                    div.pure-u-1-3.pure-u-md-2-3
+                    div.pure-u-3-4
                         div.tinyPaddingBottom
                             label(for="firstNightUntil", class="form-label")
                                 div.pure-g.content-pull
@@ -40,8 +38,6 @@ block content
                                         div.l-box
                                             input(name="firstNightUntil", id="firstNightUntil" class="form-control", value=data['firstNightUntil'] || "07:00", type="time")
                                     div.pure-u-17-24
-                                        div.l-box.l-box--no-left
-                                            span.hours-text hours the following morning
             div.pure-u-1.pure-u-md-10-24
 
         h2.heading-medium Regular HDC curfew hours
@@ -49,17 +45,17 @@ block content
         div.pure-g.largePaddingBottom.largeMarginBottom
             div.pure-u-1.pure-u-md-4-5
                 div.pure-g.smallPaddingBottom
-                    div.pure-u-1-3.pure-u-md-4-24
-                    div.pure-u-1-3.pure-u-md-10-24
+                    div.pure-u-1-4
+                    div.pure-u-1-4
                         span.bold From
-                    div.pure-u-1-3.pure-u-md-10-24
+                    div.pure-u-1-2
                         span.bold Until
 
                 for day in daysInAWeek
                     div.pure-g
-                        div.pure-u-1-3.pure-u-md-4-24
+                        div.pure-u-1-4
                             span.bold.capitalize #{day}
-                        div.pure-u-1-3.pure-u-md-10-24
+                        div.pure-u-1-4
                             div.tinyPaddingBottom
                                 label(for=day+"From", class="form-label")
                                     div.pure-g.content-pull
@@ -67,10 +63,8 @@ block content
                                             div.l-box
                                                 input(name=day+"From", id=day+"From" class="form-control", value=data[day + 'From'] || "19:00", type="time")
                                         div.pure-u-2-3
-                                            div.l-box.l-box--no-left
-                                                span.hours-text hours each evening
 
-                        div.pure-u-1-3.pure-u-md-10-24
+                        div.pure-u-1-2
                             div.tinyPaddingBottom
                                 label(for=day+"Until", class="form-label")
                                     div.pure-g.content-pull
@@ -78,8 +72,6 @@ block content
                                             div.l-box
                                                 input(name=day+"Until", id=day+"Until" class="form-control", value=data[day + 'Until'] || "07:00", type="time")
                                         div.pure-u-2-3
-                                            div.l-box.l-box--no-left
-                                                span.hours-text hours the following morning
 
         include ../includes/saveAndReturn
 
