Change login to sign in

--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -19,4 +19,4 @@ block content
                     label.form-label(for='password') Password
                     input#password.form-control(name='password', type='password', data-element-id='password')
 
-                button#submit.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Login
+                button#submit.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Sign in
