--- a/server/views/review/includes/addressActions.pug
+++ b/server/views/review/includes/addressActions.pug
@@ -1,26 +1,24 @@
-- var addressWithdrawn = address.addressWithdrawn === "Yes"
-- var addressSubmitValue = addressWithdrawn ? "No" : "Yes"
-- var addressButtonText = addressWithdrawn ? "Reinstate address" : "Offender withdrawn address"
-
-- var consentWithdrawn = address.consentWithdrawn === "Yes"
-- var consentSubmitValue = consentWithdrawn ? "No" : "Yes"
-- var consentButtonText = consentWithdrawn ? "Reinstate consent" : "Consent withdrawn"
-
 div
     h3.heading-small Actions
     div.pure-g
         div.pure-u-md-1-2
             p Homeowner/landlord consent withdrawn
             div
-                form(method="post", name="withdrawConsent", action="/hdc/curfew/withdrawConsent/" + nomisId)
-                    input(type="hidden" name="_csrf" value=csrfToken)
-                    input(type="hidden" name="consentWithdrawn" value=consentSubmitValue)
-                    button#withdrawConsent.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") #{consentButtonText}
+                if !consentWithdrawn
+                    form(method="post", name="withdrawConsent", action="/hdc/curfew/withdrawConsent/" + nomisId)
+                        input(type="hidden" name="_csrf" value=csrfToken)
+                        input(type="hidden" name="consentWithdrawn" value="Yes")
+                        button#withdrawConsent.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Consent withdrawn
+                else
+                    a.largeMarginBottom.button(href="/hdc/proposedAddress/curfewAddress/"+nomisId) Add a new address
 
         div.pure-u-md-1-2
             p Offender has requested to withdraw address
             div
-                form(method="post", name="withdrawAddress", action="/hdc/curfew/withdrawAddress/"+nomisId)
-                    input(type="hidden" name="_csrf" value=csrfToken)
-                    input(type="hidden" name="addressWithdrawn" value=addressSubmitValue)
-                    button#withdrawAddress.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") #{addressButtonText}
+                if !addressWithdrawn
+                    form(method="post", name="withdrawAddress", action="/hdc/curfew/withdrawAddress/"+nomisId)
+                        input(type="hidden" name="_csrf" value=csrfToken)
+                        input(type="hidden" name="addressWithdrawn" value="Yes")
+                        button#withdrawAddress.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Offender withdrawn address
+                else
+                    a.largeMarginBottom.button(href="/hdc/proposedAddress/curfewAddress/" + nomisId) Add a new address
