submit to dm for refusal if address withdrawn with no replacement

--- a/server/views/taskList/HDCRefusalTask.pug
+++ b/server/views/taskList/HDCRefusalTask.pug
@@ -1,5 +1,5 @@
 div.taskListItem
-    div.pure-g.borderBottomLight.midPaddingBottom
+    div.pure-g.midPaddingBottom
         div.pure-u-3-4
             if licenceStatus.decisions.refused
                 span.alert.bold HDC refused
