--- a/server/views/review/address.pug
+++ b/server/views/review/address.pug
@@ -18,10 +18,11 @@ block content
                 -var message = addressWithdrawn ? 'The offender has withdrawn this address' : 'The Homeowner/landlord has withdrawn consent for this address'
                 div.pure-g
                     div.error-summary.pure-u-1.center(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
-                        h2.heading-medium.error-summary-heading#error-summary-heading #{message}
-                        ul.error-summary-list
-                            li
-                                a(href="/hdc/proposedAddress/curfewAddress/"+nomisId) Add a new address
+                        h2.heading-medium.error-summary-heading.noMargin#error-summary-heading #{message}
+                        if stage === 'PROCESSING_CA'
+                            ul.error-summary-list.marginTopMedium
+                                li
+                                    a(href="/hdc/proposedAddress/curfewAddress/"+nomisId) Add a new address
 
 
             h2.heading-large Proposed address
